package atmmachine.enums;

public enum CardType {
    DEBIT, CREDIT
}
