package atmmachine.enums;

public enum TransactionStatus {
    PENDING, SUCCESS, FAILED, CANCELLED
}
