package atmmachine.enums;

public enum TransactionType {
    BALANCE_INQUIRY, WITHDRAWAL, DEPOSIT, TRANSFER
}
